--- a/.github/workflows/deploy-cfn.yml
+++ b/.github/workflows/deploy-cfn.yml
@@ -127,7 +127,7 @@ jobs:
       with:
          aws-access-key-id : ${{ secrets.AWS_ACCESS_KEY_ID }}
          aws-secret-access-key : ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-         aws-region: ${{ secrets.AWS_REGION }}
+         aws-region: 'us-east-1' # ${{ secrets.AWS_REGION }}
 
     - name: DEPLOY - Dev
       if:  (env.DEPLOY == 'yes' && env.ENVIRONMENT == 'development')
