--- a/.github/workflows/deploy-cfn.yml
+++ b/.github/workflows/deploy-cfn.yml
@@ -121,15 +121,15 @@ jobs:
         sudo df -h
         sudo free -h 
         sudo ls -ltr
-        
+         
     - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-         aws-access-key-id : ${{ secrets.AWS_ACCESS_KEY_ID }}
-         aws-secret-access-key : ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-         aws-region: 'us-east-1' # ${{ secrets.AWS_REGION }}
+      run: |
+        export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
+        export AWS_SECRET_KEY_ID=${{ secrets.AWS_SECRET_KEY_ID }}
+        export AWS_REGION=${{ secrets.AWS_REGION }}
+        export REGION=${{ secrets.AWS_REGION }}
 
-    - name: DEPLOY - Dev
+    - name: Deploy - Dev
       if:  (env.DEPLOY == 'yes' && env.ENVIRONMENT == 'development')
       run: |
         pwd
@@ -179,7 +179,7 @@ jobs:
         sudo free -h 
         sudo ls -ltr
         
-    - name: DEPLOY - Stag
+    - name: Deploy - Stag
       if:  (env.DEPLOY == 'yes' && env.ENVIRONMENT == 'staging')
       run: |
         pwd
@@ -229,7 +229,7 @@ jobs:
         sudo free -h 
         sudo ls -ltr
         
-    - name: DEPLOY - Prod
+    - name: Deploy - Prod
       if:  (env.DEPLOY == 'yes' && env.ENVIRONMENT == 'production')
       run: |
         pwd
@@ -254,7 +254,7 @@ jobs:
     - uses: actions/checkout@v2
       # note: checkout directory: /home/runner/work/${repo-name}/$${repo-name}
       
-    - name: DEPLOY - End
+    - name: Deploy - End
       if:  (env.DEPLOY == 'yes')
       run: |
         pwd
