--- a/.github/workflows/deploy-cfn.yml
+++ b/.github/workflows/deploy-cfn.yml
@@ -127,7 +127,7 @@ jobs:
         export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
         export AWS_SECRET_KEY_ID=${{ secrets.AWS_SECRET_KEY_ID }}
         export AWS_REGION=${{ secrets.AWS_REGION }}
-        export REGION=${{ secrets.AWS_REGION }}
+        export Region=${{ secrets.AWS_REGION }}
 
     - name: Deploy - Dev
       if:  (env.DEPLOY == 'yes' && env.ENVIRONMENT == 'development')
