--- a/.github/workflows/deploy-cfn.yml
+++ b/.github/workflows/deploy-cfn.yml
@@ -123,16 +123,12 @@ jobs:
         sudo free -h 
         sudo ls -ltr
          
-    - name: Configure AWS Credentials
-      run: |
-        export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
-        export AWS_SECRET_KEY_ID=${{ secrets.AWS_SECRET_KEY_ID }}
-        export AWS_REGION=${{ secrets.AWS_REGION }}
-        export Region=${{ secrets.AWS_REGION }}
-
     - name: Deploy - Dev
       if:  (env.DEPLOY == 'yes' && env.ENVIRONMENT == 'development')
       run: |
+        export ${{ env.AWS_ACCESS_KEY_ID }}
+        export ${{ env.AWS_SECRET_KEY_ID }} 
+        export {{ env.AWS_REGION }}
         pwd
         sudo mv index-dev.js index.js 
         sudo node index.js
