--- a/.github/workflows/deploy-cfn.yml
+++ b/.github/workflows/deploy-cfn.yml
@@ -129,10 +129,10 @@ jobs:
         export ${{ env.AWS_ACCESS_KEY_ID }}
         export ${{ env.AWS_SECRET_KEY_ID }} 
         export ${{ env.AWS_REGION }}
-        printenv
-        pwd
-        sudo mv index-dev.js index.js 
-        sudo node index.js
+        # printenv
+        # pwd
+        # sudo mv index-dev.js index.js 
+        sudo node index-dev.js
   
   
   stag:
