--- a/.github/workflows/deploy-cfn.yml
+++ b/.github/workflows/deploy-cfn.yml
@@ -126,12 +126,12 @@ jobs:
     - name: Deploy - Dev
       if:  (env.DEPLOY == 'yes' && env.ENVIRONMENT == 'development')
       run: |
-        export ${{ env.AWS_ACCESS_KEY_ID }}
-        export ${{ env.AWS_SECRET_KEY_ID }} 
-        export ${{ env.AWS_REGION }}
-        # printenv
-        # pwd
-        # sudo mv index-dev.js index.js 
+        export AWS_ACCESS_KEY_ID=${{ env.AWS_ACCESS_KEY_ID }}
+        export AWS_SECRET_KEY_ID=${{ env.AWS_SECRET_KEY_ID }} 
+        export AWS_REGION=${{ env.AWS_REGION }}
+        printenv
+        pwd
+        sudo mv index-dev.js index.js 
         sudo node index-dev.js
   
   
