--- a/.github/workflows/deploy-cfn.yml
+++ b/.github/workflows/deploy-cfn.yml
@@ -127,8 +127,12 @@ jobs:
       if:  (env.DEPLOY == 'yes' && env.ENVIRONMENT == 'development')
       run: |
         export AWS_ACCESS_KEY_ID=${{ env.AWS_ACCESS_KEY_ID }}
-        export AWS_SECRET_KEY_ID=${{ env.AWS_SECRET_KEY_ID }} 
+        export AWS_SECRET_ACCESS_KEY=${{ env.AWS_SECRET_ACCESS_KEY }} 
         export AWS_REGION=${{ env.AWS_REGION }}
+        
+        export id=${{ env.AWS_ACCESS_KEY_ID }}
+        export secret=${{ env.AWS_SECRET_ACCESS_KEY }} 
+        export region=${{ env.AWS_REGION }}
         printenv
         pwd
         sudo mv index-dev.js index.js 
