--- a/.github/workflows/deploy-cfn.yml
+++ b/.github/workflows/deploy-cfn.yml
@@ -115,13 +115,21 @@ jobs:
         sudo df -h
         sudo free -h 
         sudo ls -ltr
+           
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1 
+      with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+          
          
     - name: Deploy - Dev
       if:  (env.DEPLOY == 'yes' && env.ENVIRONMENT == 'development')
       run: |
-        export AWS_ACCESS_KEY_ID=${{ env.AWS_ACCESS_KEY_ID }}
-        export AWS_SECRET_ACCESS_KEY=${{ env.AWS_SECRET_ACCESS_KEY }} 
-        export AWS_REGION=${{ env.AWS_REGION }}
+        #export AWS_ACCESS_KEY_ID=${{ env.AWS_ACCESS_KEY_ID }}
+        #export AWS_SECRET_ACCESS_KEY=${{ env.AWS_SECRET_ACCESS_KEY }} 
+        #export AWS_REGION=${{ env.AWS_REGION }}
         # printenv
         # pwd
         sudo mv index-dev.js index.js 
