--- a/.github/workflows/deploy-cfn.yml
+++ b/.github/workflows/deploy-cfn.yml
@@ -122,6 +122,13 @@ jobs:
         export AWS_ACCESS_KEY_ID=${{ env.AWS_ACCESS_KEY_ID }}
         export AWS_SECRET_ACCESS_KEY=${{ env.AWS_SECRET_ACCESS_KEY }} 
         export AWS_REGION=${{ env.AWS_REGION }}
+        
+        # persist credentials
+        echo 'AWS_ACCESS_KEY_ID=${{ env.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY=${{ env.AWS_SECRET_ACCESS_KEY }} 
+        AWS_REGION=${{ env.AWS_REGION }}
+        ' > .env
+        
         # printenv
         sudo mv index-dev.js index.js 
         sudo node index.js
