--- a/.github/workflows/deploy-cfn.yml
+++ b/.github/workflows/deploy-cfn.yml
@@ -82,14 +82,13 @@ jobs:
     - uses: actions/checkout@v2
       # note: checkout directory: /home/runner/work/${repo-name}/$${repo-name}
       
-    - name: Install Node.js & CFN-Client-V3 Module
+    - name: Install Node.js & Dependent Modules
       run: |
         # install
         sudo apt-get -y update
         curl -fsSL https://deb.nodesource.com/setup_19.x | sudo -E bash -
         sudo apt-get install -y nodejs
-        sudo npm install  --prefix $BASE_DIRECTORY/$REPO_NAME/$REPO_NAME @aws-sdk/client-cloudformation
-        sudo npm install dotenv
+        sudo npm install  --prefix $BASE_DIRECTORY/$REPO_NAME/$REPO_NAME @aws-sdk/client-cloudformation dotenv
         
         # check versions & show directory's contents and details
         pwd
@@ -103,17 +102,12 @@ jobs:
     - name: Deploy - Dev
       if:  (env.DEPLOY == 'yes' && env.ENVIRONMENT == 'development')
       run: |
-        export AWS_ACCESS_KEY_ID=${{ env.AWS_ACCESS_KEY_ID }}
-        export AWS_SECRET_ACCESS_KEY=${{ env.AWS_SECRET_ACCESS_KEY }} 
-        export AWS_REGION=${{ env.AWS_REGION }}
-        
         # persist credentials
         echo 'AWS_ACCESS_KEY_ID=${{ env.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY=${{ env.AWS_SECRET_ACCESS_KEY }} 
         AWS_REGION=${{ env.AWS_REGION }}
         ' > .env
-        
-        # printenv
+        # run code
         sudo mv index-dev.js index.js 
         sudo node index.js
   
@@ -143,13 +137,13 @@ jobs:
     - uses: actions/checkout@v2
       # note: checkout directory: /home/runner/work/${repo-name}/$${repo-name}
       
-    - name: Install Node.js & CFN-Client-V3 Module
+    - name: Install Node.js & Dependent Modules
       run: |
         # install
         sudo apt-get -y update
         curl -fsSL https://deb.nodesource.com/setup_19.x | sudo -E bash -
         sudo apt-get install -y nodejs
-        sudo npm install  --prefix $BASE_DIRECTORY/$REPO_NAME/$REPO_NAME @aws-sdk/client-cloudformation
+        sudo npm install  --prefix $BASE_DIRECTORY/$REPO_NAME/$REPO_NAME @aws-sdk/client-cloudformation dotenv
         
         # check versions & show directory's contents and details
         pwd
@@ -163,11 +157,16 @@ jobs:
     - name: Deploy - Stag
       if:  (env.DEPLOY == 'yes' && env.ENVIRONMENT == 'staging')
       run: |
-        pwd
-        sudo mv index-stag.js index.js 
+        # persist credentials
+        echo 'AWS_ACCESS_KEY_ID=${{ env.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY=${{ env.AWS_SECRET_ACCESS_KEY }} 
+        AWS_REGION=${{ env.AWS_REGION }}
+        ' > .env
+        # run code
+        sudo mv index-dev.js index.js 
         sudo node index.js
-        
-        
+  
+      
   prod:
     #if: ${{ always() }}
     if: ${{ false }}  # disable job
@@ -193,13 +192,13 @@ jobs:
     - uses: actions/checkout@v2
       # note: checkout directory: /home/runner/work/${repo-name}/$${repo-name}
       
-    - name: Install Node.js & CFN-Client-V3 Module
+    - name: Install Node.js & Dependent Modules
       run: |
         # install
         sudo apt-get -y update
         curl -fsSL https://deb.nodesource.com/setup_19.x | sudo -E bash -
         sudo apt-get install -y nodejs
-        sudo npm install  --prefix $BASE_DIRECTORY/$REPO_NAME/$REPO_NAME @aws-sdk/client-cloudformation
+        sudo npm install  --prefix $BASE_DIRECTORY/$REPO_NAME/$REPO_NAME @aws-sdk/client-cloudformation dotenv
         
         # check versions & show directory's contents and details
         pwd
@@ -213,9 +212,15 @@ jobs:
     - name: Deploy - Prod
       if:  (env.DEPLOY == 'yes' && env.ENVIRONMENT == 'production')
       run: |
-        pwd
-        sudo mv index-prod.js index.js 
+        # persist credentials
+        echo 'AWS_ACCESS_KEY_ID=${{ env.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY=${{ env.AWS_SECRET_ACCESS_KEY }} 
+        AWS_REGION=${{ env.AWS_REGION }}
+        ' > .env
+        # run code
+        sudo mv index-dev.js index.js 
         sudo node index.js
+  
         
         
   end:
