--- a/inputConfig.json
+++ b/inputConfig.json
@@ -6,12 +6,12 @@
     "resoureName" :  "subsurface",
     "creator" : "info@domain.com",
     "stackName": "rt-subsurface-analysis-dev",
-    "stackTerminationProtection": true,
+    "stackTerminationProtection": false,
     "stackDescription": "Deploy AWS Keyspaces (for Apache Cassandra) for Drilling, Reservoir & Production Applications.",
     "stackTemplateBodyFileName" : "keyspace.yaml",
     "stackTemplateURL" : "bucketName - this is an alternative to 'stackTemplateBody'",
     "credentials" : "credentials.json",
-    "createResources" : true,
-    "updateResources" : false,
+    "createResources" : false,
+    "updateResources" : true,
     "deleteResources" : false
 }
