--- a/.github/workflows/deploy-cfn.yml
+++ b/.github/workflows/deploy-cfn.yml
@@ -131,7 +131,7 @@ jobs:
           "credentials" : {
             "accessKeyId" : "AWS_ACCESS_KEY_ID=${{ env.AWS_ACCESS_KEY_ID }}",
             "secretAccessKey" : "AWS_SECRET_ACCESS_KEY=${{ env.AWS_SECRET_ACCESS_KEY }}",
-            "region" : AWS_REGION=${{ env.AWS_REGION }}
+            "region" : "AWS_REGION=${{ env.AWS_REGION }}"
           }
         }
         ' > credentials.json
