--- a/.github/workflows/deploy-cfn.yml
+++ b/.github/workflows/deploy-cfn.yml
@@ -28,7 +28,7 @@ name: CI - AWS-SDK-JS-V3 Deploy CFN
   # pull_request:
   # matches pull request for all branches and tag names
   
-# Option 2: Custom (Manual) Workflow
+# Option 2: Custom Workflow
 on:
   workflow_dispatch:
     inputs:
