--- a/inputConfig.json
+++ b/inputConfig.json
@@ -6,10 +6,13 @@
     "resoureName" :  "subsurface",
     "creator" : "info@domain.com",
     "stackName": "rt-subsurface-analysis-dev",
-    "stackTerminationProtection": true,
+    "stackTerminationProtection": false,
     "stackDescription": "Deploy AWS Keyspaces (for Apache Cassandra) for Drilling, Reservoir & Production Applications.",
     "stackTemplateBodyFileName" : "keyspace.yaml",
     "stackTemplateURL" : "bucketName - this is an alternative to 'stackTemplateBody'",
+    "stackCapabilities" :  [ "CAPABILITY_NAMED_IAM" ],
+    "stackOnFailure" :  "DELETE",
+    "TimeoutInMinutes" : 10,
     "credentials" : "credentials.json",
     "createResources" : true,
     "updateResources" : false,
